fix: remove whitespace from top of content well

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -50,8 +50,7 @@
 
 /* remove whitespace below main content area */
 #zak-primary {
-	padding-right: 0;
-	padding-bottom: 0;
+	padding: 0;
 }
 
 .zak-content .zak-row {
